A11y BUGFIX:  Adjust foreground colour value to improve contrast ratio

--- a/web/themes/custom/abrsd/scss/partials/_components.scss
+++ b/web/themes/custom/abrsd/scss/partials/_components.scss
@@ -17,7 +17,7 @@
     margin-bottom: 0.5rem;
   }
   .card-tag {
-    color: $primary-shade;
+    color: $tag-text;
   }
 }
 
