--- a/web/themes/custom/abrsd/scss/variables.scss
+++ b/web/themes/custom/abrsd/scss/variables.scss
@@ -71,3 +71,6 @@ $alt-background-card-footer: rgb(233, 231, 231);
 // Menu
 $menu-background: $black;
 $menu-social-icons: $alt-background-teal;
+
+// Tags
+$tag-text: darken($primary-shade, 12%);
